k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nollea-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nollea-backend
  template:
    metadata:
      labels:
        app: nollea-backend
    spec:
      containers:
        - name: backend
          image: 837126493345.dkr.ecr.ap-northeast-2.amazonaws.com/team4/backend:37 #fixme
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: nollea-backend
spec:
  selector:
    app: nollea-backend
  ports:
  - port: 80
    targetPort: 8080
