k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nollea-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nollea-frontend
  template:
    metadata:
      labels:
        app: nollea-frontend
    spec:
      containers:
      - name: frontend
        image: 837126493345.dkr.ecr.ap-northeast-2.amazonaws.com/team4/frontend:26 #fixme
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: config-volume
          mountPath: /app/config
          readOnly: true
      volumes:
      - name: config-volume
        configMap:
          name: nollea-frontend-config
---
apiVersion: v1
kind: Service
metadata:
  name: nollea-frontend
spec:
  selector:
    app: nollea-frontend
  ports:
  - port: 80
    targetPort: 3000
