k8s/ingress-front.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nollea-frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: nollea.goorm.training
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nollea-frontend
            port:
              number: 80
